# quickstats-python

./: LICENSE  README.md  pyproject.toml
docs/: index.html  search.js
docs/adaptive_stats/: quickstats.html
docs/stream_stats/: quickstats.html
src/adaptive_stats/: __init__.py
src/stream_stats/: quickstats.py
tests/: test_quickstats.py
