[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "stream_stats"
version = "0.1.0"
authors = [
  { name="Paul J Sanchez", email="prof.paul.sanchez@gmail.com" },
]
description = "Dynamically updated basic descriptive statistics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[project.urls]
Homepage = "https://github.com/SimulationDOE/quickstats-python.git"
